Added date and thumbnail

--- a/app/src/main/res/layout/list_item_article.xml
+++ b/app/src/main/res/layout/list_item_article.xml
@@ -12,19 +12,45 @@
                                                  android:layout_height="wrap_content">
 
         <TextView android:id="@+id/title"
-                  android:layout_width="wrap_content"
+                  android:layout_width="0dp"
                   android:layout_height="wrap_content"
-                  android:layout_marginBottom="8dp"
-                  android:layout_marginLeft="8dp"
-                  android:layout_marginRight="8dp"
-                  android:layout_marginTop="8dp"
+                  android:layout_marginLeft="16dp"
+                  android:layout_marginRight="16dp"
+                  android:layout_marginTop="16dp"
                   android:background="?attr/selectableItemBackground"
-                  app:layout_constraintBottom_toBottomOf="parent"
+                  android:ellipsize="end"
+                  android:maxLines="1"
+                  android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                  android:textSize="16sp"
                   app:layout_constraintHorizontal_bias="0.0"
-                  app:layout_constraintLeft_toLeftOf="parent"
+                  app:layout_constraintLeft_toRightOf="@+id/thumbnail"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   bind:text="@{viewModel.title}"
                   tools:text="Headline ..."/>
+        <ImageView android:id="@+id/thumbnail"
+                   android:layout_width="40dp"
+                   android:layout_height="40dp"
+                   android:layout_marginBottom="16dp"
+                   android:layout_marginLeft="16dp"
+                   android:layout_marginTop="16dp"
+                   app:layout_constraintBottom_toBottomOf="parent"
+                   app:layout_constraintLeft_toLeftOf="parent"
+                   app:layout_constraintTop_toTopOf="parent"
+                   app:layout_constraintVertical_bias="0.5"
+                   bind:image_url="@{viewModel.imageUrl}"
+                   tools:srcCompat="@android:drawable/ic_delete"/>
+        <TextView android:id="@+id/date"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginBottom="16dp"
+                  android:layout_marginLeft="16dp"
+                  android:layout_marginTop="8dp"
+                  android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                  app:layout_constraintBottom_toBottomOf="parent"
+                  app:layout_constraintLeft_toRightOf="@+id/thumbnail"
+                  app:layout_constraintTop_toBottomOf="@+id/title"
+                  bind:text="@{viewModel.date}"
+                  tools:text="14/03/2017"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
